--- a/Final project Transfer/app/src/main/res/layout/activity_main.xml
+++ b/Final project Transfer/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,7 @@
         android:layout_height="100dip"
         android:id="@+id/Tourist"
         android:src="@drawable/tourist"
-        android:layout_marginTop="150dp"
+        android:layout_marginBottom="25dip"
        android:layout_centerInParent="true"
          />
 
