--- a/Final project Transfer/app/src/main/res/layout/exp_registert.xml
+++ b/Final project Transfer/app/src/main/res/layout/exp_registert.xml
@@ -86,7 +86,7 @@
                 <Button
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@android:color/transparent"
+                    android:background="@android:color/holo_blue_dark"
                     android:text="Continue"
                     android:id="@+id/cont"
                     android:textAllCaps="false"
