--- a/Final project Transfer/app/src/main/res/layout/activity_exp_dashboard.xml
+++ b/Final project Transfer/app/src/main/res/layout/activity_exp_dashboard.xml
@@ -1,12 +1,63 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:layout_height="match_parent" android:orientation="vertical"
     tools:context="com.nkawooya.finalprojecttransfer.Experience.Exp_dashboard">
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+       android:layout_gravity="start"
+        android:layout_margin="10dip">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:text="Small Text"
+            android:gravity="center"
+            android:ems="10"
+            android:textSize="14dip"
+            android:layout_gravity="center"
+            android:id="@+id/dusername"
+             />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:text="Small Text"
+            android:gravity="center"
+            android:ems="10"
+            android:textSize="14dip"
+            android:layout_gravity="center"
+            android:id="@+id/dcountry"
+            />
+        </LinearLayout>
 
-    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <ScrollView
+        android:layout_width="fill_parent"
+        android:layout_height="420dip"
+        android:id="@+id/scrollView"
+        android:layout_gravity="center_horizontal"
+         >
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-</RelativeLayout>
+            </LinearLayout>
+         </ScrollView>
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Exit"
+        android:id="@+id/exit"
+        android:textSize="15dip"
+        android:textAllCaps="false"
+        android:background="@android:color/transparent"
+        android:layout_gravity="center_horizontal"
+        android:clickable="false"
+        android:onClick="OnLogoutClick"
+        android:nestedScrollingEnabled="true" />
+
+
+</LinearLayout>
