--- a/Final project Transfer/app/src/main/res/layout/exp_registert.xml
+++ b/Final project Transfer/app/src/main/res/layout/exp_registert.xml
@@ -9,7 +9,7 @@
         android:text="@string/reg"
         android:textSize="35dip"
         android:layout_margin="10dip"
-        android:textStyle="bold"
+
         android:textColor="#000"
         android:layout_gravity="center"
         android:id="@+id/textView3" />
@@ -24,11 +24,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="4dp">
-
+                <EditText style="@style/edittext"
+                    android:hint="Name"
+                    android:id="@+id/Rname"/>
                 </android.support.design.widget.TextInputLayout>
-            <EditText style="@style/edittext"
-                android:hint="Name"
-                android:id="@+id/Rname"/>
+
             <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -86,11 +86,12 @@
                 <Button
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@android:color/holo_blue_dark"
-                    android:text="Continue"
+                    android:text="Register"
                     android:id="@+id/cont"
+                    android:layout_margin="10dip"
                     android:textAllCaps="false"
-                    android:textSize="16dip"/>
+                    android:textSize="16dip"
+                    android:onClick="onAdminRegister" />
 
             </LinearLayout>
         </LinearLayout>
